--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 17, 2023 06:44:50 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 20, 2023 01:24:05 PM</span></a>
 </li>
 </ul>
 </div>
@@ -61,13 +61,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 17, 2023 06:44:50 PM</h3>
+<h3>Jan 20, 2023 01:24:05 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 17, 2023 06:45:29 PM</h3>
+<h3>Jan 20, 2023 01:25:03 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -138,7 +138,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>22</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>42</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -157,7 +157,7 @@
 </div></div>
 <script>
 var timeline = {
-"Test Task module Functionality":38.306
+"Test Task module Functionality":57.875
 };
 </script>
 <div class="row">
@@ -207,7 +207,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 22,
+passGrandChild: 42,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -239,7 +239,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Test Task module Functionality</p>
             <p class="text-sm">
-              <span>18:44:50 PM</span> / <span>00:00:38:306</span>
+              <span>13:24:05 PM</span> / <span>00:00:57:875</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -248,9 +248,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Test Task module Functionality</h5>
-<span class='badge badge-success'>01.17.2023 18:44:50</span>
-<span class='badge badge-danger'>01.17.2023 18:45:29</span>
-<span class='badge badge-default'>00:00:38:306</span>
+<span class='badge badge-success'>01.20.2023 13:24:05</span>
+<span class='badge badge-danger'>01.20.2023 13:25:03</span>
+<span class='badge badge-default'>00:00:57:875</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -305,6 +305,36 @@ eventsCount: 5,
       <div>
       </div>
               </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.click_on_label_icon()">
+                <span>Then click on Label icon</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.click_on_new_label_button()">
+                <span>Then click on New label button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.enter_label_name()">
+                <span>Then enter label name</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.click_on_create_label_button()">
+                <span>Then click on create label button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.validate_label_create_message()">
+                <span>Then validate Label create message</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.LabelTest.click_on_hamburger_icon_of_project()">
+                <span>Then click on Hamburger icon of project</span>
+      <div>
+      </div>
+              </div>
               <div class="step pass-bg" title="StepDefinitions.TaskTest.clicks_on_add_task_button()">
                 <span>Then clicks on add task button</span>
       <div>
@@ -322,6 +352,11 @@ eventsCount: 5,
               </div>
               <div class="step pass-bg" title="StepDefinitions.TaskTest.select_bucket_option()">
                 <span>Then select bucket option</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.TaskTest.upload_file_for_task()">
+                <span>Then Upload file for task</span>
       <div>
       </div>
               </div>
@@ -355,6 +390,11 @@ eventsCount: 5,
       <div>
       </div>
               </div>
+              <div class="step pass-bg" title="StepDefinitions.TaskTest.select_label_option()">
+                <span>Then select Label option</span>
+      <div>
+      </div>
+              </div>
               <div class="step pass-bg" title="StepDefinitions.TaskTest.enter_task_comment()">
                 <span>Then enter task comment</span>
       <div>
@@ -372,6 +412,66 @@ eventsCount: 5,
               </div>
               <div class="step pass-bg" title="StepDefinitions.TaskTest.validate_update_task_message()">
                 <span>Then validate update task message</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.TaskTest.clicks_on_delete_task_button()">
+                <span>Then clicks on Delete task Button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.TaskTest.validate_delete_task_message()">
+                <span>Then validate Delete task message</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.click_on_edit_button()">
+                <span>Then click on Edit button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.update_project_title()">
+                <span>Then update project title</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.update_project_visibility()">
+                <span>Then update project visibility</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.update_project_handle()">
+                <span>Then update project handle</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.add_project_members()">
+                <span>Then add project members</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.update_visible_bucket()">
+                <span>Then update visible bucket</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.click_on_update_button()">
+                <span>Then click on Update button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.update_project_successfully_message()">
+                <span>Then Update project successfully message</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.clicks_delete_project_button()">
+                <span>Then clicks delete project button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="StepDefinitions.ProjectTest.display_delete_project_message()">
+                <span>Then display delete project message</span>
       <div>
       </div>
               </div>
